# 1brc.rs

./: Cargo.toml
src/: main.rs
