[package]
name = "onebillionrowchallenge_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
